Complete code for project select.

--- a/Qtracker/Qtracker/Qtracker.csproj
+++ b/Qtracker/Qtracker/Qtracker.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>Project.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="select.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
